--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@
 }
 
 .btn-whatsapp {
-  background-color: #00e676 !important;
+  background-color: #198754 !important;
   color: #ffffff !important;
 }
 
@@ -84,6 +84,10 @@
   color: #ffffff !important;
 }
 
+.btn-linkedin {
+  background-color: #0d6efd !important;
+  color: #ffffff !important;
+}
 
 .card-image {
   width: 180px;
@@ -93,4 +97,14 @@
 .card-shadow {
   border-radius: 10px;
   box-shadow: 5px 8px 20px 2px
+}
+
+.resize-none {
+  resize: none;
+}
+
+.contact-form {
+  background-color: var(--secondary-color);;
+  color: #ffffff;
+  border-radius: 10px;
 }
